Adds mail template editing
